[package]
name = "cackle"
version = "0.2.0"
edition = "2021"
rust-version = "1.67"
license = "MIT OR Apache-2.0"
description = "A Rust code ACL checker"
readme = "README.md"
repository = "https://github.com/cackle-rs/cackle"

[dependencies]
anyhow = "1.0.33"
clap = { version = "4.2.1", features = [ "derive" ] }
serde = { version = "1.0.136", features = [ "derive", "rc" ] }
toml = "0.7.3"
serde_json = "1.0.95"
cargo_metadata = "0.17.0"
object = "0.32.0"
ar = "0.9.0"
gimli = { version = "0.28.0", default-features = false, features = ["read"] }
rustc-demangle = "0.1.22"
once_cell = "1.17.1"
is-terminal = "0.4.8"
colored = "2.0.0"
rustc-ap-rustc_lexer = "727.0.0"
indoc = "2.0.1"
log = { version = "0.4.19", features = [ "std" ] }
addr2line = { version = "0.21.0", default-features = false, features = [ "std" ] }
tempfile = "3.6.0"

toml_edit = { version = "0.19.8", optional = true }
ratatui = { version = "0.23.0", optional = true }
diff = { version = "0.1.13", optional = true }
crossterm = { version = "0.27.0", optional = true }
fxhash = "0.2.1"
tui-input = "0.8.0"

[features]
default = ["ui"]

# Enable the "ui" subcommand.
ui = ["toml_edit", "ratatui", "diff", "crossterm"]

# Build even on an operating system that isn't yet supported. Enable this feature if you're working
# on porting.
unsupported-os = []

# Profile used for CI. We turn off incremental compilation and debug info, since both are
# unnecessary in CI and slow things down.
[profile.ci]
inherits = "dev"
incremental = false
debug = 0

[profile.release]
strip = true
