[package]
name = "cargo-acl"
version = "0.8.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
description = "A Rust code ACL checker"
readme = "README.md"
repository = "https://github.com/cackle-rs/cackle"
keywords = ["cargo", "plugin", "security", "supply-chain"]

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = [ "derive" ] }
serde = { version = "1.0.228", features = [ "derive", "rc" ] }
toml = "0.8.23"
serde_json = "1.0.149"
cargo_metadata = "0.18.1"
object = "0.32.2"
ar = "0.9.0"
gimli = { version = "0.28.1", default-features = false, features = ["read"] }
rustc-demangle = "0.1.27"
once_cell = "1.21.4"
is-terminal = "0.4.17"
colored = "2.2.0"
ra-ap-rustc_lexer = "0.162.0"
indoc = "2.0.7"
log = { version = "0.4.29", features = [ "std" ] }
addr2line = { version = "0.21.0", default-features = false, features = [ "std" ] }
tempfile = "3.27.0"
rustc-hash = "2.1.2"
tui-input = "0.8.0"
toml_edit = { version = "0.20.7" }

ratatui = { version = "0.24.0", optional = true }
diff = { version = "0.1.13", optional = true }
crossterm = { version = "0.27.0", optional = true }

[features]
default = ["ui"]

# Enable the "ui" subcommand.
ui = ["ratatui", "diff", "crossterm"]

# Build even on an operating system that isn't yet supported. Enable this feature if you're working
# on porting.
unsupported-os = []

# Profile used for CI. We turn off incremental compilation and debug info, since both are
# unnecessary in CI and slow things down.
[profile.ci]
inherits = "dev"
incremental = false
debug = 0

[profile.release]
#strip = true
