[workspace]
members = [
    "crab1",
    "crab2",
    "crab3",
    "crab4",
    "crab5",
    "crab6",
    "crab7",
    "crab8",
    "crab9",
    "crab10",
    "crab11",
    "crab-bin",
    "pmacro1",
    "shared1",
    "res1",
]
exclude = [
    "crab3v2",
]

[profile.cackle-release]
inherits = "release"
opt-level = 0
split-debuginfo = "off"
strip = false
debug = 2
lto = "off"
