[workspace]
members = [
    "crab-1",
    "crab-2",
    "crab-3",
    "crab-4",
    "crab-5",
    "crab-6",
    "crab-7",
    "crab-8",
    "crab-9",
    "crab-10",
    "crab-11",
    "crab-bin",
    "pmacro-1",
    "shared-1",
    "res-1",
]
exclude = [
    "crab-3v2",
]
resolver = "2"

[profile.cackle-release]
inherits = "release"
opt-level = 0
split-debuginfo = "off"
strip = false
debug = 2
lto = "off"
