[package]
name = "crab-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
crab1 = { path = "../crab1" }
crab2 = { path = "../crab2" }
crab4 = { path = "../crab4" }
crab6 = { path = "../crab6" }
crab7 = { path = "../crab7" }
crab8 = { path = "../crab8" }
pmacro1 = { path = "../pmacro1" }

[features]
crash-if-not-sandboxed = [ "crab2/crash-if-not-sandboxed" ]
foo = []
